# SkullStripper

./: CMakeLists.txt  SkullStripper.cxx  SkullStripper.xml  SkullStripper.xml.in  itkFuzzyClassificationImageFilter.h  itkFuzzyClassificationImageFilter.txx
Data/Baseline/: SkullStripperTest.nrrd.md5
Testing/Cxx/: CMakeLists.txt
